<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="432dp"
            android:layout_height="729dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="77dp"/>
        <TextView
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView19" android:textSize="18sp" android:text="@string/ingrese_su_peso"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText3" android:textSize="18sp"/>
        <TextView
                android:text="@string/ingrese_su_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView20"
                android:textSize="18sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText7"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2" android:text="@string/btnCalcular"
                android:textSize="18sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="68dp">
            <TextView
                    android:text="@string/imc_resultado"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content" android:id="@+id/textView24" android:textSize="18sp"/>
            <EditText
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText4" android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="67dp">
            <TextView
                    android:layout_width="123dp"
                    android:layout_height="54dp" android:id="@+id/textView26" android:layout_weight="1"
                    android:textSize="18sp" android:text="@string/resultado"/>
            <EditText
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText6" android:layout_weight="1" android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>